# FIT_opendatadownloader

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  download.py  pyproject.toml  requirements-dev.txt  requirements.txt  source.schema.json  source_schema.json  sources_example.json  test_download.py
.github/workflows/: download-annually.yaml  download-annualy.yaml  download-daily.yaml  download-monthly.yaml  download-quarterly.yaml  download-weekly.yaml  download.yaml  test.yaml  validate.yaml
config/: parks.json  roads.json
sources/: regional_district_codes.txt  source_filename_guide.csv  sources.csv  valid_sources.csv  validate_source_filenames.py
sources/CAPRD/: CapRD.json  caprd.json  victoria.json
sources/CMXRD/: courtenay.json
sources/CORD/: kelowna.json
sources/FFGRD/: prince_george.json
sources/FVRD/: chilliwack.json
sources/MVRD/: burnaby.json  coquitlam.json  langley.json  langley_city.json  surrey.json
sources/NRD/: nanaimo.json
sources/SCRD/: SCRD.json  scrd.json
sources/STRD/: STRD.json  campbell_river.json  strd.json
sources/TNRD/: kamloops.json
sources/_TEST/: test.json
src/fit_changedetector/: __init__.py  cli.py  data_source.py  diff.py  download.py  source_layer.py
src/fit_opendatadownloader/: __init__.py  cli.py  data_source.py  fit_downloader.py
tests/: test_cli.py  test_config_b.json  test_diffs.py  test_download.py
tests/data/: addition.geojson  airports.geojson  deletion.geojson  dups.geojson  dups_geom.json  fieldnames.geojson  mixed_types.geojson  modified_attributes.geojson  modified_geom.geojson  test_parks_nopk.geojson  test_parks_pk.geojson
