[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fit_opendatadownloader"
dynamic = ["version"]
readme = "README.md"
authors = [
  {name="Simon Norris", email="snorris@hillcrestgeo.ca"},
]
description = "Download open data, monitor and report on changes"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: GIS",
    "Operating System :: OS Independent"
]
dependencies = [
  "bcdata",
  "boto3",
  "click",
  "esridump",
  "geopandas",
  "jsonschema",
  "fit_changedetector@git+https://github.com/bcgov/FIT_changedetector",
]

[project.optional-dependencies]
test = [
  "pytest",
  "build",
  "pre-commit"
]

[project.scripts]
fit_downloader = "fit_opendatadownloader.cli:cli"

[project.urls]
Homepage = "https://github.com/bcgov/fit_opendatadownloader"
Issues = "https://github.com/bcgov/fit_opendatadownloader"

[tool.hatch.version]
path = "src/fit_opendatadownloader/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true